[tool.poetry]
name = "sra-collector"
version = "0.0.1"
description = "Collect NIH SRA metadata of several studies in one search"
authors = ["Marta Arcones <marta.arcones@alumnos.upm.es>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
urllib3 = "^2.0.7"
botocore = "^1.33.6"
boto3 = "^1.33.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
